Fix bug and align cards

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,20 +42,26 @@
     --text-color: #000000;
     --border-color: #005cd4;
 }
+html{
+    height: 100vh;
+    width: 100vw;
+    background: var(--terniary-color);
+}
 
-.body{
+body{
     background: var(--terniary-color);
     line-height: 1.6;
     font-weight: 400;
     font-size: 16px;
-    font-family: 'Merriweather Sans', sans-serif;;
+    font-family: 'Merriweather Sans', sans-serif;
+    height: 100vh;
 }
 .pokedex-container{
     display: flex;
-    align-content: center;
+    align-items: center;
     background: var(--terniary-color);
     justify-content: center;
-    font-family: 'Merriweather Sans', sans-serif;
+    height: 100%;
 }
 .pokedex-item{
     background-color: var(--primary-color);
@@ -65,6 +71,8 @@
     border-radius: 20px;
     color: var(--text-color);
     width: 25%;
+    overflow: scroll;
+    height: 300px;
 }
 
 .title{
